# trendingTerms

./: .gitignore  Investigation.md  README.md  pyproject.toml  tutorial.ipynb
citiTrends/: trends.py
ds_trends/: frequency_calculator.py  stop_words.txt  top_terms_extractor.py  trends.py
tests/: test_trends.py
